# Generate-Weekly-PDFs-DSR-Resiliency

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  New Contract Rates copy regenerated again.csv  analyze_excel_totals.py  codecov.yml  generate_weekly_pdfs.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: context-map.md  context-policy.json  project-state.md
.github/: copilot-instructions.md
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
billing_audit/: schema.sql  writer.py
docs/: AI_CONTEXT_RESUME.md  CHANGELOG_CONTEXT.md  DECISIONS.md  PROJECT_BRIEF.md  refactor-assessment-generate-weekly-pdfs.md
memory-bank/: activeContext.md  living-ledger.md
pipeline/: __init__.py  attribution.py  change_detection.py  cleanup.py  config.py  discovery.py  excel.py  fetch.py  grouping.py  observability.py  orchestrate.py  pricing.py  retry.py  types.py  upload.py  utils.py
portal/: package-lock.json  package.json
portal-v2/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vercel.json  vite.config.ts
scripts/: check_api_equality.py  check_facade_completeness.py  check_mypy_delta.sh  check_run_summary_structure.py  package-lock.json  package.json  publish_artifacts_to_supabase.py  run_6_gates.sh  security-probe.ts
supabase/: portal_schema.sql
tests/: test_audit_billing_changes.py  test_billing_audit_shadow.py  test_claimer_remediation.py  test_cleanup_excels.py  test_cron_monitor_config.py  test_entrypoint_no_double_import.py  test_facade_harness.py  test_live_proxy_globals.py  (+17 more)
(+254 files in other folders)
